added build dependencies

--- a/front-end/bower.json
+++ b/front-end/bower.json
@@ -5,5 +5,11 @@
     "Nico Rehwaldt <git_nikku@nixis.de>"
   ],
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "ratchet": "~2.0.2",
+    "angular": "~1.2.18",
+    "angular-route": "~1.2.18",
+    "jquery": "~2.1.1"
+  }
 }
