--- a/front-end/package.json
+++ b/front-end/package.json
@@ -27,11 +27,15 @@
     "karma": "^0.12.15",
     "karma-bro": "^0.2.2",
     "karma-jasmine": "^0.1.5",
-    "karma-phantomjs-launcher": "^0.1.3"
+    "karma-phantomjs-launcher": "^0.1.3",
+    "brfs": "^1.1.1"
   },
   "browser": {
     "fs": false,
     "angular": "./vendor/angular.js",
     "angular-route": "./vendor/angular-route.js"
+  },
+  "dependencies": {
+    "jquery": "^2.1.1"
   }
 }
