--- a/front-end/bower.json
+++ b/front-end/bower.json
@@ -10,6 +10,7 @@
     "ratchet": "~2.0.2",
     "angular": "~1.2.18",
     "angular-route": "~1.2.18",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "fastclick": "~1.0.2"
   }
 }
