--- a/server/pom.xml
+++ b/server/pom.xml
@@ -388,6 +388,12 @@
             <version>1.3.1.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.paypal.sdk</groupId>
+            <artifactId>rest-api-sdk</artifactId>
+            <version>0.5.2</version>
+        </dependency>
+
         <!-- Database dependencies-->
         <dependency>
             <groupId>mysql</groupId>
