--- a/server/src/main/resources/paypal.properties
+++ b/server/src/main/resources/paypal.properties
@@ -19,4 +19,6 @@ http.GoogleAppEngine = false
 service.EndPoint=https://api.sandbox.paypal.com
 # Live EndPoint
 # service.EndPoint=https://api.paypal.com
+clientID=AaBXHRDQ3IfAf-xeIW21e_sQke-yy1pvdRdn-w_kgDbgpgL9rf27tANX6PCV
+clientSecret=EOF1chBkueXN2vOVLXfbMcuWJ7_qnZDsn0-e2pQXZf5CQ-3SZnlcbKy4Z7Or
 
